spacing issue

--- a/css/responsive-and-slider.css
+++ b/css/responsive-and-slider.css
@@ -187,7 +187,7 @@
   }
   .scroll-parent {
     position: absolute;
-    right: -10px;
+    right: -20px;
     top: 53%;
 }
   }
